--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,23 @@
-### JetBrains
-.idea
+# Created by .ignore support plugin (hsz.mobi)
+### Linux template
+*~
+
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
+# .nfs files are created when an open file is removed but is still being accessed
+.nfs*
 
 ### Windows template
 # Windows thumbnail cache files
 Thumbs.db
+Thumbs.db:encryptable
 ehthumbs.db
 ehthumbs_vista.db
 
@@ -25,6 +39,7 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
 ### Go template
 # Binaries for programs and plugins
 *.exe
@@ -33,11 +48,15 @@ $RECYCLE.BIN/
 *.so
 *.dylib
 
-# Test binary, build with `go test -c`
+# Test binary, built with `go test -c`
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+# Dependency directories (remove the comment below to include it)
+# vendor/
+
 ### macOS template
 # General
 .DS_Store
@@ -65,18 +84,38 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
-### Linux template
-*~
 
-# temporary files which can be created if a process still has a handle open of a deleted file
-.fuse_hidden*
+### JetBrains template
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
-# KDE directory preferences
-.directory
+# User-specific stuff
+.idea
 
-# Linux trash folder which might appear on any partition or disk
-.Trash-*
+# Gradle and Maven with auto-import
+# When using Gradle or Maven with auto-import, you should exclude module files,
+# since they will be recreated, and may cause churn.  Uncomment if using
+# auto-import.
+# *.iml
+# *.ipr
 
-# .nfs files are created when an open file is removed but is still being accessed
-.nfs*
+# CMake
+cmake-build-*/
 
+# File-based project format
+*.iws
+
+# IntelliJ
+out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
